[package]
name = "omnicanvas"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "console"        # <--- add this
] }
console_error_panic_hook = "0.1"
